# OpenOps

./: .gitignore  .spacesignore  README.md  app.py  deploy.py  graders.py  inference.py  models.py  pyproject.toml
openops-incident-commander/: Dockerfile  README.md  graders.py  inference.py  models.py  openenv.yaml  output.json  submission_log.txt  test_env.py  test_local.py  validate_submission.py
openops-incident-commander/server/: my_env_environment.py
server/: Dockerfile  __init__.py  app.py  my_env_environment.py  requirements.txt
